--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,8 @@
 \documentclass[lang=cn]{elegantbook}
-% \usepackage[utf8]{inputenc}
-\usepackage{amsmath}
+\usepackage[utf8]{inputenc}
 \usepackage{amssymb}
+\usepackage{amsmath}
+\usepackage{etoolbox}
 \input{newcommand}
 
 \title{数学分析}
