--- a/newcommand.tex
+++ b/newcommand.tex
@@ -5,3 +5,10 @@
 \newcommand{\collect}[1]{\left\{ #1\right\}}
 \newcommand{\funclim}[3]{\lim_{#1 \to #2 } #3}
 \newcommand{\arccot}{\mathrm{arccot}}
+\newcommand{\e}{\mathrm{e}}
+\newcommand{\D}{\mathrm{d}}
+\newcommand{\ch}{\mathrm{ch}}
+\newcommand{\sh}{\mathrm{sh}}
+% \th \eth is defined
+\newcommand{\thx}{\mathrm{th}}
+\newcommand{\cth}{\mathrm{cth}}
