--- a/chapter4.tex
+++ b/chapter4.tex
@@ -542,4 +542,54 @@ $f(x)$在$(a, b)$上每一点可导, 在$x = a$上有右导数, $x = b$又左导
 
 % 陈老视频47
 \section{高阶导数和高阶微分}
+\begin{definition}[高阶导数的定义]
+    $y=f(x)$, 若$f'(x)$任然可导, 则记它的导函数为：
+    \begin{equation*}
+        \left[ f'(x) \right]' = f''(x)
+    \end{equation*}
+    称它为$f(x)$的二阶导数。也可记为$y''(x)$, $\der{}{x}\left(\der{y}{x}\right) = \dern{2}{y}{x}$, $\der{}{x}\left(\der{f}{x}\right) = \dern{2}{f}{x}$。
 
+    若$f''(x)$仍可导, 则它的导数称为$f(x)$的三阶导数, 记为$f'''(x)$, 也可以记为$y'''(x)$, $\der{}{x}\left(\dern{2}{y}{x}\right) = \dern{3}{y}{x}$, $\der{}{x}\left(\dern{2}{f}{x}\right) = \dern{3}{f}{x}$。
+
+    \def\tmp#1{f^{(#1)}(x)}
+    从四阶开始记为$\tmp{4}, \tmp{5}, \cdots , \tmp{n}, \cdots$
+\end{definition}
+
+\begin{definition}
+    \def\tmp#1{f^{(#1)}(x)}
+    \def\tmpa#1{y^{(#1)}(x)}
+    设$f$的$n-1$阶导数$\tmp{n-1}$仍然可导, 则它的导数记为$\left[ \tmp{n-1}\right]' = \tmp{n}$, 也可记为$\tmpa{n}, \dern{n}{f}{x}, \dern{n}{y}{x}$
+\end{definition}
+
+\begin{example}
+    求
+    \begin{equation*}
+        y = \e^x
+    \end{equation*}
+    的高阶导数。
+\end{example}
+\begin{proof}
+    
+\end{proof}
+
+\begin{example}
+    求
+    \begin{equation*}
+        y = a^x
+    \end{equation*}
+    的高阶导数。
+\end{example}
+\begin{proof}
+    
+\end{proof}
+
+\begin{example}
+    求
+    \begin{equation*}
+        y = \sin(x)
+    \end{equation*}
+    的高阶导数。
+\end{example}
+\begin{proof}
+    
+\end{proof}
