--- a/newcommand.tex
+++ b/newcommand.tex
@@ -12,3 +12,6 @@
 % \th \eth is defined
 \newcommand{\thx}{\mathrm{th}}
 \newcommand{\cth}{\mathrm{cth}}
+
+\newcommand{\der}[2]{\frac{\D #1}{\D #2}}
+\newcommand{\dern}[3]{\frac{\D^#1 #2}{\D #3^#1}}
