--- a/chapter4.tex
+++ b/chapter4.tex
@@ -746,7 +746,7 @@ $\left[\frac{f(x)}{g(x)}\right]^{n}$无固定公式, 要考虑成$\left[f(x)\cdo
     \end{equation*}
     \framebox{解2}:
     \begin{equation*}
-        \D^2 y = f''(u)du^2+f'(u)d^u \quad (u = \sin(x))
+        \D^2 y = f''(u)du^2+f'(u)d^2 u \quad (u = \sin(x))
     \end{equation*}
 \end{proof}
 
