--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,9 @@
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{etoolbox}
+\usepackage{xcolor}
 \input{newcommand}
+\graphicspath{{picture/}{figure/}}
 
 \title{数学分析}
 \author{hapo}
@@ -27,5 +29,6 @@
 \input{chapter2}
 \input{chapter3}
 \input{chapter4}
+\input{chapter5}
 
 \end{document}
