--- a/newcommand.tex
+++ b/newcommand.tex
@@ -1,3 +1,4 @@
+\newcommand\wyc[1]{\bf\textcolor{cyan}{#1}}
 \newcommand{\listsum}[3]{#1_0 #2^#3 + #1_1 #2^{#3 - 1} + \cdots + #1_{#3 - 1} #2 + #1_k}
 \newcommand{\mean}[2]{\frac{#1_1 + #1_2 + \cdots + #1_#2}{#2}}
 \newcommand{\mylim}[2]{\lim_{#1 \to \infty } #2}
